--- a/templates/baseFront.html.twig
+++ b/templates/baseFront.html.twig
@@ -62,7 +62,7 @@ body%
 
     </div>
   </header><!-- End Header -->
-
+{% block body %}
   <!-- ======= Hero Section ======= -->
   <section id="hero">
     <div id="heroCarousel" data-bs-interval="5000" class="carousel slide carousel-fade" data-bs-ride="carousel">
@@ -236,7 +236,7 @@ body%
       </div>
     </section><!-- End Services Section -->
 
-    <!-- ======= Portfolio Section ======= -->{% block body %}
+    <!-- ======= Portfolio Section ======= -->
     <section id="portfolio" class="portfolio">
       <div class="container">
 
