--- a/templates/reservation/index.html.twig
+++ b/templates/reservation/index.html.twig
@@ -3,8 +3,9 @@
 {% block body %}
 <link rel="stylesheet" href="{{ asset('Back/css/style.css') }}">
 <div class="container">
+<h1>La liste des réservations</h1>
 <table class="table">
-<a href="{{ path('app_reservation_new') }}" class="btn btn-success mb-3">Ajouter</a>
+<a href="{{ path('app_reservation_new') }}" class="btn btn-success mb-3">Ajouter une réservation</a>
 
 
 <thead>
