--- a/templates/bonplan/_delete_form.html.twig
+++ b/templates/bonplan/_delete_form.html.twig
@@ -1,4 +1,4 @@
 <form method="post" action="{{ path('app_bonplan_delete', {'idBonplan': bonplan.idBonplan}) }}" onsubmit="return confirm('Are you sure you want to delete this item?');">
     <input type="hidden" name="_token" value="{{ csrf_token('delete' ~ bonplan.idBonplan) }}">
-    <button class="btn">Delete</button>
+    <button class="btn btn-danger btn-delete">Supprimer</button>
 </form>
