--- a/templates/bonplan/edit.html.twig
+++ b/templates/bonplan/edit.html.twig
@@ -2,11 +2,12 @@
 {% extends 'baseBack.html.twig' %}
 
 {% block body %}
-    <h1>Edit Bonplan</h1>
+    <h1>Modifier le bon plan</h1>
+      <a href="{{ path('app_bonplan_index') }}" class="btn btn-success mb-3">Retour</a>
 
-    {{ include('bonplan/_form.html.twig', {'button_label': 'Update'}) }}
+    {{ include('bonplan/_form.html.twig', {'button_label': 'modifier'}) }}
 
-    <a href="{{ path('app_bonplan_index') }}">back to list</a>
+   
 
     {{ include('bonplan/_delete_form.html.twig') }}
 {% endblock %}
