--- a/templates/bonplan/showFront.html.twig
+++ b/templates/bonplan/showFront.html.twig
@@ -1,15 +1,10 @@
-{% extends 'baseBack.html.twig' %}
-
-
 {% block body %}
     <h1>Bonplan</h1>
+    <a href="{{ path('app_bonplanFront_show') }}">Retour</a>
 
     <table class="table">
+    
         <tbody>
-            <tr>
-                <th>IdBonplan</th>
-                <td>{{ bonplan.idBonplan }}</td>
-            </tr>
             <tr>
                 <th>TitreBonplan</th>
                 <td>{{ bonplan.titreBonplan }}</td>
@@ -29,9 +24,6 @@
         </tbody>
     </table>
 
-    <a href="{{ path('app_bonplan_index') }}">back to list</a>
+    
 
-    <a href="{{ path('app_bonplan_edit', {'idBonplan': bonplan.idBonplan}) }}">edit</a>
-
-    {{ include('bonplan/_delete_form.html.twig') }}
 {% endblock %}
