--- a/templates/reservation/_form.html.twig
+++ b/templates/reservation/_form.html.twig
@@ -1,5 +1,5 @@
 {{form_start(form,{'attr':{'novalidate':'novalidate'}})}}
     {{ form_widget(form) }}
-    <button class="btn">{{ button_label|default('Ajouter') }}</button>
+    <button class="btn btn-success mb-3">{{ button_label|default('Ajouter') }}</button>
   
 {{ form_end(form) }}
