--- a/templates/reservation/edit.html.twig
+++ b/templates/reservation/edit.html.twig
@@ -1,11 +1,13 @@
 {% extends 'baseBack.html.twig' %}
 
 {% block body %}
-    <h1>Edit Reservation</h1>
+    <h1>Modifier la réservation</h1>
 
-    {{ include('reservation/_form.html.twig', {'button_label': 'Update'}) }}
+    <a href="{{ path('app_bonplan_index') }}" class="btn btn-success mb-3">Retour</a>
 
-    <a href="{{ path('app_reservation_index') }}">back to list</a>
+    {{ include('bonplan/_form.html.twig', {'button_label': 'modifier'}) }}
+
+    
 
     
 {% endblock %}
