--- a/templates/reservation/new.html.twig
+++ b/templates/reservation/new.html.twig
@@ -1,7 +1,7 @@
 {% extends 'baseBack.html.twig' %}
 
 {% block body %}
-    <h1>Create new Reservation</h1>
+    <h1>Ajouter une réservation</h1>
 <a href="{{ path('app_reservation_index') }}" class="btn btn-success mb-3">Retour</a>
 
     {{ include('reservation/_form.html.twig') }}
