--- a/templates/statistique.html.twig
+++ b/templates/statistique.html.twig
@@ -244,7 +244,7 @@ id="main" class="main">
 
 
 <section class="section Acceuil">
-{% block stylesheets %}
+
     <!-- Favicon -->
     <link href="{{asset('back/img/favicon.ico')}}" rel="icon">
 
@@ -253,19 +253,12 @@ id="main" class="main">
     <link rel="preconnect" href="{{asset('https://fonts.gstatic.com')}}" crossorigin>
     <link href="{{asset('https://fonts.googleapis.com/css2?family=Heebo:wght@400;500;600;700&display=swap')}}" rel="stylesheet">
     
-    <!-- Icon Font Stylesheet -->
+ 
     
 
-    <!-- Libraries Stylesheet -->
-    <link href="{{asset('back/lib/owlcarousel/assets/owl.carousel.min.css')}}" rel="stylesheet">
-    <link href="{{asset('back/lib/tempusdominus/css/tempusdominus-bootstrap-4.min.css')}}" rel="stylesheet" />
 
-    <!-- Customized Bootstrap Stylesheet -->
-    <link href="{{asset('back/css/bootstrap.min.css')}}" rel="stylesheet">
 
-    <!-- Template Stylesheet -->
-    <link href="{{asset('back/css/style.css')}}" rel="stylesheet">
-    {% endblock %}
+   
 
   {% block javascripts %}
     <script type="text/javascript" src="https://www.gstatic.com/charts/loader.js"></script>
@@ -274,14 +267,7 @@ id="main" class="main">
     <link href="{{asset('https://cdn.jsdelivr.net/npm/bootstrap-icons@1.4.1/font/bootstrap-icons.css')}}" rel="stylesheet">
     <script src="{{asset('https://code.jquery.com/jquery-3.4.1.min.js')}}"></script>
     <script src="{{asset('https://cdn.jsdelivr.net/npm/bootstrap@5.0.0/dist/js/bootstrap.bundle.min.js')}}"></script>
-    <script src="{{asset('back/lib/chart/chart.min.js')}}"></script>
-    <script src="{{asset('back/lib/easing/easing.min.js')}}"></script>
-    <script src="{{asset('back/lib/waypoints/waypoints.min.js')}}"></script>
-    <script src="{{asset('back/lib/owlcarousel/owl.carousel.min.js')}}"></script>
-    <script src="{{asset('back/lib/tempusdominus/js/moment.min.js')}}"></script>
-    <script src="{{asset('back/lib/tempusdominus/js/moment-timezone.min.js')}}"></script>
-    <script src="{{asset('back/lib/tempusdominus/js/tempusdominus-bootstrap-4.min.js')}}"></script>
-    <script src="{{asset('back/js/main.js')}}"></script>
+   
      {% endblock %}
   
    <!-- Google Web Fonts -->
@@ -294,24 +280,9 @@ id="main" class="main">
   
      <link href="{{asset('https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.10.0/css/all.min.css')}}" rel="stylesheet">
     <link href="{{asset('https://cdn.jsdelivr.net/npm/bootstrap-icons@1.4.1/font/bootstrap-icons.css')}}" rel="stylesheet">
-   <link href="{{asset('assets/admin/vendor/fontawesome-free/css/all.min.css')}}"    rel="stylesheet" type="text/css" />
-    <link href="{{asset('assets/admin/vendor/bootstrap/css/bootstrap.min.css')}}" rel="stylesheet" type="text/css" />
-    <link href="{{asset('assets/admin/css/toastr.css')}}" rel="stylesheet"/>
-    <link href="{{asset('assets/admin/css/select2.min.css')}}" rel="stylesheet"/>
-    <link href="{{asset('assets/admin/css/tagify.css')}}" rel="stylesheet"/>
-    <link rel="stylesheet" href="{{asset('  assets/admin/css/summernote.css')}}"/>
-    <link href="{{asset('assets/admin/css/bootstrap-colorpicker.css')}}"  rel="stylesheet"/>
-    <link href="{{asset('assets/admin/css/bootstrap-iconpicker.css')}}" rel="stylesheet"/>
-    <link href="{{asset('assets/admin/css/color-picker.css')}}" rel="stylesheet"/>
-
-    <link href="{{asset('assets/admin/css/plugin.css')}}" rel="stylesheet" />
-    <link href="{{asset('assets/admin/css/ruang-admin.css')}}" rel="stylesheet">
-    <link href="{{asset('assets/admin/css/custom.css')}}"  rel="stylesheet">
 
 
 {% block body %}
-    
-
 
     <h1>Statistiques</h1>
 
@@ -382,13 +353,33 @@ id="main" class="main">
         <td><img src="{{ asset('images/' ~ produit.image) }}" alt="{{ produit.libelle }}"  width="100" /></td>
         <td>{{ produit.libelle }}</td>
         <td>{{ produit.description }}</td>
-<td><span class="prix" id="prix-{{ produit.ref_produit }}" data-prix="{{ produit.prixVente }}">{{ produit.prixVente }} €</span></td>
+<td><span class="prix" id="prix-{{ produit.ref_produit }}" data-prix="{{ produit.prixVente }}">{{ produit.prixVente }} dt</span></td>
         <td><input type="number" class="form-control" id="taux-{{ produit.ref_produit }}" value="0"></td>
-        <td><button class="btn btn-primary" onclick="appliquerPromotion({{ produit.ref_produit }})">Valider</button></td>
+        <td><button class="btn btn-primary" onclick="appliquerPromotion('{{ produit.ref_produit }}')">Valider</button></td>
       </tr>
     {% endfor %}
   </tbody>
 </table>
+<script>
+function appliquerPromotion(ref_produit) {
+  var taux = document.getElementById("taux-" + ref_produit).value;
+  // Envoie une requête AJAX pour mettre à jour le prix de vente
+  var xhr = new XMLHttpRequest();
+xhr.open('POST', '/update_prix/' + ref_produit + '/' + taux);
+  xhr.setRequestHeader('Content-Type', 'application/json;charset=UTF-8');
+  xhr.onload = function() {
+    if (xhr.status === 200) {
+      // Affiche le nouveau prix de vente après avoir reçu la réponse
+      var nouveauPrixVente = JSON.parse(xhr.responseText).nouveauPrixVente;
+document.getElementById("prix-" + ref_produit).innerHTML = nouveauPrixVente + " dt";
+    } else {
+      console.log('Erreur lors de la mise à jour du prix de vente.');
+    }
+  };
+  xhr.send(JSON.stringify({taux: taux}));
+}
+
+</script>
 
 
 
@@ -416,34 +407,7 @@ id="main" class="main">
 <script src="{{asset('Back/vendor/simple-datatables/simple-datatables.js')}}"></script>
 <script src="{{asset('Back/vendor/tinymce/tinymce.min.js')}}"></script>
 <script src="{{asset('Back/vendor/php-email-form/validate.js')}}"></script>
-
-<!-- Template Main JS File -->
-<script src="{{asset('Back/js/main.js')}}"></script>{% endblock %}
-
-function appliquerPromotion(ref_produit) {
-  var taux = document.getElementById("taux-" + ref_produit).value;
-  var prixVente = document.getElementById('prix-' + ref_produit).getAttribute('data-prix');
-  var nouveauPrix = parseFloat(prixVente) * (1 - parseFloat(taux) / 100);
-  document.getElementById('prix-' + ref_produit).textContent = nouveauPrix.toFixed(2) + ' €';
-
-  // Envoyer la nouvelle valeur de prix au serveur avec AJAX
-  var xhttp = new XMLHttpRequest();
-  xhttp.onreadystatechange = function() {
-    if (this.readyState == 4 && this.status == 200) {
-      var response = JSON.parse(this.responseText);
-      if (response.success) {
-        console.log('Prix mis à jour avec succès.');
-      } else {
-        console.error(response.error);
-      }
-    }
-  };
-xhttp.open('POST', '/Elbaldi/src/Controller/LiquidationAjax.php', true);
-  xhttp.setRequestHeader('Content-type', 'application/x-www-form-urlencoded');
-  xhttp.send('ref_produit=' + ref_produit + '&prix=' + nouveauPrix);
-}
-
-
+  {% endblock %}
 
 
 
